[metadata]
name = velodyne-decoder
version = 2.3.0
author = Martin Valgur
author_email = martin.valgur@gmail.com
url = https://github.com/valgur/velodyne_decoder
description = Decoder for raw Velodyne packet data
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
keywords =
    Velodyne
    pointcloud
    PCL
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    numpy
    importlib_resources
    dpkt

[options.extras_require]
tests =
  pytest
  requests
  pathlib; python_version < "3"
  rosbag

[options.package_data]
* = *.yml
